# KDToolBox

./: .clang-format  .clazy  .codespellrc  .gitignore  .gitmodules  .gitreview  .krazy  .mdlrc.rb  .pre-commit-config.yaml  .pylintrc  .qmake.conf  .travis.yml  CMakeLists.txt  KDToolBox.pro  LICENSE  LICENSE.GPL.txt  LICENSE.MIT.txt  LICENSE.txt  README.md  REUSE.toml  appveyor.yml  configtests.pri
.reuse/: dep5
cpp/: CMakeLists.txt  cpp.pro
cpp/duplicatetracker/: CMakeLists.txt  README.md  duplicatetracker.pro
cpp/duplicatetracker/include/: duplicatetracker.h  include.pro
cpp/duplicatetracker/tests/: CMakeLists.txt  tests.pro
cpp/duplicatetracker/tests/duplicatetracker/: CMakeLists.txt  duplicatetracker.pro  tst_duplicatetracker.cpp
cpp/future-backports/: README.md  future-backports.pro
cpp/future-backports/include/k20/: deque.h  forward_list.h  k20.pro  list.h  map.h  set.h  string.h  unordered_map.h  unordered_set.h  vector.h
cpp/future-backports/tests/: CMakeLists.txt  tests.pro
cpp/future-backports/tests/k20/: CMakeLists.txt  k20.pro
cpp/propagate_const/: README.md  propagate_const.h  propagate_const.pro
cpp/propagate_const/test/: CMakeLists.txt  test.pro  tst_propagate_const.cpp
cpp/toContainer/: CMakeLists.txt  README.md  toContainer.h  toContainer.pro  tst_toContainer.cpp
cpp/toContainer/testcpp14/: CMakeLists.txt  testcpp14.pro
cpp/toContainer/testcpplatest/: CMakeLists.txt  testcpplatest.pro
qt/: CMakeLists.txt  dpiinfo.h  qt.pro
qt/KDCoro/: CMakeLists.txt  KDCoro.h  README.md
qt/KDCoro/test/: CMakeLists.txt  tst_KDCoro.cpp
qt/KDSignalThrottler/: CMakeLists.txt  KDSignalThrottler.pro  README.md
qt/KDSignalThrottler/example/: example.pro
qt/KDSignalThrottler/examples/: CMakeLists.txt  examples.pri  examples.pro
qt/KDSignalThrottler/examples/debouncedSearch/: CMakeLists.txt  debouncedSearch.pro  main.cpp
qt/KDSignalThrottler/examples/signalThrottlersDemo/: CMakeLists.txt  main.cpp
qt/KDSignalThrottler/src/: KDSignalThrottler.cpp  KDSignalThrottler.h
qt/KDSignalThrottler/test/: CMakeLists.txt  test.pro  tst_KDSignalThrottler.cpp
qt/KDSqlDatabaseTransaction/: KDSqlDatabaseTransaction.h  KDSqlDatabaseTransaction.pro  README.md
qt/KDSqlDatabaseTransaction/test/: CMakeLists.txt  test.pro  tst_KDSqlDatabaseTransaction.cpp
qt/KDStlContainerAdaptor/: KDStlContainerAdaptor.h  KDStlContainerAdaptor.pro  README.md
qt/KDStlContainerAdaptor/test/: CMakeLists.txt  test.pro  tst_KDStlContainerAdaptor.cpp
qt/asan_assert_fail_qt/: CMakeLists.txt  README.md  asan_assert_fail_qt.cpp  asan_assert_fail_qt.pro
qt/cmake-project/: README.md  cmake-project
qt/cmake-project/cmake/: osdeployqt.cmake
qt/eventfilter/: README.md  eventfilter.h  eventfilter.pro
qt/eventfilter/example/: CMakeLists.txt  example.pro  main.cpp
qt/includemocs/: README.md  check-includemocs-hook.sh  includemocs.py
qt/messagehandler/: CMakeLists.txt  README.md  common.pri  messagehandler.pro
qt/messagehandler/example/: CMakeLists.txt  example.pro  main.cpp
qt/messagehandler/src/: messagehandler.cpp  messagehandler.h
qt/messagehandler/tests/: CMakeLists.txt  tests.pro
qt/messagehandler/tests/messagehandler/: CMakeLists.txt  messagehandler.pro  tst_messagehandler.cpp
qt/model_view/: CMakeLists.txt  README.md  model_view.pro
qt/model_view/KDFunctionalSortFilterProxyModel/: CMakeLists.txt  KDFunctionalSortFilterProxyModel.pro  README.md  common.pri
qt/model_view/KDFunctionalSortFilterProxyModel/example/: CMakeLists.txt  example.pro  main.cpp
qt/model_view/KDFunctionalSortFilterProxyModel/src/: KDFunctionalSortFilterProxyModel.cpp  KDFunctionalSortFilterProxyModel.h
qt/model_view/KDFunctionalSortFilterProxyModel/test/: CMakeLists.txt  test.pro  tst_kdfunctionalsortfilterproxymodel.cpp
qt/model_view/KDTableToListProxyModel/: CMakeLists.txt  KDTableToListProxyModel.pro  README.md  common.pri
qt/model_view/KDTableToListProxyModel/examples/: CMakeLists.txt  examples.pro
qt/model_view/KDTableToListProxyModel/src/: KDTableToListProxyModel.cpp  KDTableToListProxyModel.h
qt/model_view/ModelIterator/: ModelIterator.cpp  ModelIterator.h  ModelIterator.pro  README.md
qt/model_view/modelIterator/: ModelIterator.cpp  ModelIterator.h  ModelIterator.pro  README.md  main.cpp
qt/model_view/sortProxyModel/: README.md  sortProxyModel.pro  sortproxymodel.cpp  sortproxymodel.h
qt/model_view/updateableModel/: README.md  UpdateableModel.h  updateableModel.pro
qt/notify_guard/: README.md
qt/notify_guard/src/: notifyguard.cpp  notifyguard.h
qt/notify_guard/test/: CMakeLists.txt  test.pro  tst_notifyguard.cpp
qt/pointer_cast/: README.md  pointer_cast.h  pointer_cast.pro
qt/pointer_cast/test/: CMakeLists.txt  test.pro  tst_pointer_cast.cpp
qt/qml/: CMakeLists.txt  qml.pro
qt/qml/PropertySelector/: PropertySelector.cpp  PropertySelector.h  README.md
qt/qml/QmlStackTraceHelper/: QmlStackTraceHelper.cpp  README.md
qt/qt6_natvis/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  natvis.code-workspace  qt6.natvis
qt/qt_fmt/: CMakeLists.txt  README.md  qt_fmt.h  qt_fmt.pro  qt_fmt_helpers.h  qt_std_format.h
qt/qt_fmt/test/: CMakeLists.txt  test.pro  tst_qt_fmt.cpp
qt/qt_fmt/testfmt/: CMakeLists.txt  tst_qt_fmt.cpp
qt/qt_fmt/teststd/: CMakeLists.txt  tst_qt_std_format.cpp
qt/qt_hasher/: README.md  qt_hasher.h
qt/qt_hasher/test/: CMakeLists.txt  test.pro  tst_qt_hasher.cpp  tst_qt_hasher.h
qt/singleshot_connect/: CMakeLists.txt  README.md  singleshot_connect.h
qt/singleshot_connect/test/: CMakeLists.txt  test.pro  tst_singleshot_connect.cpp
qt/stringtokenizer/: README.md  stringtokenizer.pro
qt/stringtokenizer/include/: QStringTokenizer  qstringtokenizer.h
qt/stringtokenizer/src/: qstringtokenizer.cpp  src.pro
qt/stringtokenizer/tests/: CMakeLists.txt  tests.pro
qt/tabWindow/: README.md
qt/tabWindow/example/: CMakeLists.txt  example.pro  main.cpp
qt/tabWindow/src/: tabwindow.cpp  tabwindow.h
qt/ui_watchdog/: README.md  uiwatchdog.h
qt/ui_watchdog/example/: CMakeLists.txt  example.pro  main.cpp
(+79 files in other folders)
