# This file is part of KDToolBox.
#
# SPDX-FileCopyrightText: 2023 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
#
# SPDX-License-Identifier: MIT
#
add_subdirectory(duplicatetracker)
add_subdirectory(future-backports)
add_subdirectory(propagate_const)
add_subdirectory(toContainer)
